# PTTimeline

./: .gitignore  @Claude_Project_Files.bat  @ps_terminal_here.cmd  @ps_terminal_here.ps1  Demo.pttd  Demo.{}.pttp  FUNDING.yml  PTTimeline.iss  PTTimeline.spec  PTTimeline_Issues.json  README.md  _ptt_update_version.py  build_all.bat  build_exe.bat  build_exe_folders.bat  build_exe_pyinstaller.bat  build_install.bat  gh_issues_to_md.ps1  license.txt  pttedit.VersionInfo  pttedit.py  pttplot.VersionInfo  pttplot.py  pttview.VersionInfo  pttview.py  pyproject.toml  requirements.txt  requirements_310.txt  requirements_311.txt  set-env.ps1  show_release_downloads.ps1
INI/: pttedit.ini  pttplot.ini  pttview.ini
Releases/: PTTimeline v0.3.1-dev.26031601.md  PTTimeline v0.4.0-dev.md  PTTimeline v0.5.0-dev.md
branding/: PTTimeline_Social_Preview.pdn
docs/: PTTEdit_UserGuide.html  PTTPlot_UserGuide.html  PTTView_UserGuide.html
lib/: ptt_appinfo.py  ptt_config.py  ptt_debugging.py  ptt_recent_files.py  ptt_splash.py  ptt_utils.py  pttedit_delegates.py  pttedit_expression_evaluator.py
samples/: Dual_Pipettor.pttd  Dual_Pipettor.{}.pttp  PTTimelimne_Demo(robotic_pipettor).pttd  SampleData_Large.pttd  SampleData_Large.{Stacked}.pttp  SampleData_Large.{}.pttp  Test.pttd  Test.{Stacked}.pttp  Test.{UnStacked}.pttp  Test.{}.pttp  robotic_pipettor.{}.pttp  robotic_pipettor_v1.pttd  robotic_pipettor_v2.pttd  robotic_pipettor_v2.{}.pttp  robotic_pipettor_v3.pttd  robotic_pipettor_v3.{}.pttp  robotic_pipettor_v4.pttd  robotic_pipettor_v4.{}.pttp  robotic_pipettor_v5.pttd  (+1 more)
(+4 files in other folders)
